--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,14 @@
  .jumbotron {
    background-image: url(/documents/images/banner2-5.jpg);
    object-fit: contain;
+   background-size: cover;
+
+   /* height: 250px; 
+    max-width:1400px; */
  }
+
+
+
 
  .card:hover {
    opacity: 0.7;
